--- a/packages/SystemUI/res/values-rm/strings.xml
+++ b/packages/SystemUI/res/values-rm/strings.xml
@@ -86,11 +86,11 @@
     <skip />
     <!-- no translation found for always_use_accessory (1210954576979621596) -->
     <skip />
-    <!-- no translation found for usb_debugging_title (1114766024068112429) -->
+    <!-- no translation found for usb_debugging_title (4513918393387141949) -->
     <skip />
-    <!-- no translation found for usb_debugging_message (719863946976291180) -->
+    <!-- no translation found for usb_debugging_message (2220143855912376496) -->
     <skip />
-    <!-- no translation found for usb_debugging_always (4253099426793114693) -->
+    <!-- no translation found for usb_debugging_always (303335496705863070) -->
     <skip />
     <!-- no translation found for compat_mode_on (6623839244840638213) -->
     <skip />
@@ -269,5 +269,53 @@
     <!-- no translation found for jelly_bean_dream_name (5992026543636816792) -->
     <skip />
     <!-- no translation found for start_dreams (870400522982252717) -->
+    <skip />
+    <!-- no translation found for quick_settings_airplane_mode_label (5510520633448831350) -->
+    <skip />
+    <!-- no translation found for quick_settings_battery_label (2764511189368020794) -->
+    <skip />
+    <!-- no translation found for quick_settings_bluetooth_label (6304190285170721401) -->
+    <skip />
+    <!-- no translation found for quick_settings_brightness_label (6968372297018755815) -->
+    <skip />
+    <!-- no translation found for quick_settings_ime_label (6877325300716130498) -->
+    <skip />
+    <!-- no translation found for quick_settings_location_label (3292451598267467545) -->
+    <skip />
+    <!-- no translation found for quick_settings_media_device_label (1302906836372603762) -->
+    <skip />
+    <!-- no translation found for quick_settings_rssi_label (7725671335550695589) -->
+    <skip />
+    <!-- no translation found for quick_settings_rssi_emergency_only (2713774041672886750) -->
+    <skip />
+    <!-- no translation found for quick_settings_settings_label (5326556592578065401) -->
+    <skip />
+    <!-- no translation found for quick_settings_time_label (4635969182239736408) -->
+    <skip />
+    <!-- no translation found for quick_settings_user_label (5238995632130897840) -->
+    <skip />
+    <!-- no translation found for quick_settings_wifi_label (4393429107095001520) -->
+    <skip />
+    <!-- no translation found for quick_settings_wifi_no_network (2221993077220856376) -->
+    <skip />
+    <!-- no translation found for quick_settings_wifi_display_label (6653501376641018614) -->
+    <skip />
+    <!-- no translation found for quick_settings_wifi_display_no_connection_label (6255615315258869136) -->
+    <skip />
+    <!-- no translation found for quick_settings_brightness_dialog_title (8599674057673605368) -->
+    <skip />
+    <!-- no translation found for quick_settings_brightness_dialog_auto_brightness_label (5064982743784071218) -->
+    <skip />
+    <!-- no translation found for wifi_display_scan (8453135922233546097) -->
+    <skip />
+    <!-- no translation found for wifi_display_disconnect (5450214362789378584) -->
+    <skip />
+    <!-- no translation found for wifi_display_dialog_title (2817993038700218900) -->
+    <skip />
+    <!-- no translation found for wifi_display_state_available (980373281442607096) -->
+    <skip />
+    <!-- no translation found for wifi_display_state_connecting (1677010908036241940) -->
+    <skip />
+    <!-- no translation found for wifi_display_state_connected (9154375061719151149) -->
     <skip />
 </resources>
