--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -3890,7 +3890,7 @@
     <!-- Message shown in dialog when user is attempting to set the music volume above the
     recommended maximum level for headphones -->
     <string name="safe_media_volume_warning" product="default">
-       "Raise volume above the recommended level?"
+       "Raise volume above safe level?\nListening at high volume for long periods may damage your hearing."
     </string>
 
     <string name="kg_temp_back_string"> &lt; </string> <!-- TODO: remove this -->
